get rid of deprecated Class.newInstance()